# habit-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: authentication.md  event_bus.md
habit_tracker/: __init__.py
habit_tracker/application/: __init__.py  event_bus.py  reminder_handlers.py  repositories.py  security.py  services.py
habit_tracker/domain/: __init__.py  clock.py  completion.py  event_collector.py  events.py  habit.py  helpers.py  reminder.py  schedule.py  streak.py  streak_factory.py  streak_rules.py  user.py
habit_tracker/infrastructure/: __init__.py  clock.py  event_bus.py  inmemory_repositories.py  settings.py  sqlite_repositories.py
habit_tracker/interfaces/api/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_api.py  test_api_reminders.py  test_application_events.py  test_application_service.py  test_auth_login.py  test_completion.py  test_event_bus.py  test_event_collector.py  test_event_subscribers.py  test_habit.py  test_habits_multitenant.py  test_helpers.py  test_repositories_inmemory.py  test_safe_event_bus.py  test_schedule.py  test_schedule_next_due.py  test_sqlite_repositories.py  test_streak.py  test_streak_at_least_n_in_m_rule.py  test_streak_daily.py  test_streak_factory.py  test_streak_times_per_week.py  utils.py
