[project]
name = "habit-tracker"
version = "0.1.0"
description = "Event-driven habit tracker backend"
authors = [
    { name = "Victor Moreno Jimenez", email = "victormoreno@protonmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.1,<10.0.0)", "pytest-cov (>=7.0.0,<8.0.0)", "httpx (>=0.28.1,<0.29.0)"]

[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = "Event-driven habit tracker backend"
authors = ["Victor Moreno Jimenez <victormoreno@protonmail.com>"]
packages = [{ include = "habit_tracker" }]
